# compiler

./: .gitignore  BUILD.md  CMakeLists.txt  Gloin0.0.1.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  LICENSE  QUICK_START.md  README.md  RESTRUCTURING_SUMMARY.md  TODO_v0_0_1.md  VECTOR_ACHIEVEMENT.md  VERSION  armory.toml  build.sh  create-release.sh  demo.sh  dev_helper.sh  fibo.gloin  hello_std.gloin  math.gloin  missing_features.md  utils.gloin  v0_0_1_test_simple.gloin
.github/workflows/: release.yml
demo_project/: armory.toml  comprehensive.gloin  main.gloin  utils.gloin
examples/: README.md  complete_types_test.gloin  enum_basic.gloin  enum_usage.gloin  factorial.gloin  factorial_with_casting.gloin  fibo  fibo.gloin  functions  hello_std  hello_world  hello_world.gloin  math  math.gloin  type_casting.gloin  ultimate_factorial.gloin  utils  utils.gloin  variables  variables.gloin  vector_api_demo.gloin  vector_basic.gloin  vector_complete.gloin  vector_correct.gloin  vector_cpp_style.gloin  vector_foundation.gloin  vector_methods.gloin  vector_oop.gloin  vector_oop_clean.gloin  vector_progress.gloin  vector_simple.gloin  vector_with_access.gloin  version_test
include/: ast.h  codegen.h  lexer.h  parser.h  types.h
includes/: crypto.gloin  http_client.gloin
release/gloin-linux-x64/: RELEASE_NOTES.md  quick-start.sh
release/gloin-linux-x64/examples/: functions.gloin  main.gloin
src/: ast.c  codegen.c  lexer.c  main.c  parser.c  types.c
tests/: arithmetic_showcase.gloin  arithmetic_test.gloin  arithmetic_test2.gloin  assignment_test.gloin  break_continue_test.gloin  comprehensive_assignment_test.gloin  comprehensive_match_test.gloin  comprehensive_method_test.gloin  comprehensive_pointer_test.gloin  comprehensive_pointer_test_clean.gloin  comprehensive_struct_test.gloin  comprehensive_switch_test.gloin  comprehensive_test.gloin  constant_method_test.gloin  control_flow_test.gloin  debug_pointer.gloin  debug_struct.gloin  debug_switch.gloin  empty_switch.gloin  field_access_test.gloin  full_param_test.gloin  method_generation_test.gloin  method_test.gloin  method_with_params_test.gloin  minimal_struct.gloin  minimal_switch.gloin  mutability_showcase.gloin  mutability_test.gloin  mutability_test_simple.gloin  one_case_switch.gloin  param_test.gloin  param_test2.gloin  precedence_test.gloin  simple_assignment_test.gloin  simple_break_test.gloin  simple_comprehensive_switch.gloin  simple_continue_test.gloin  simple_for_test.gloin  simple_for_test2.gloin  simple_if_test.gloin  (+15 more)
